parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     block -> INDENT statements DEDENT
Rule 3     statements -> statement
Rule 4     statements -> statements statement
Rule 5     statement -> if_statement
Rule 6     statement -> def_statement
Rule 7     statement -> loop_statement
Rule 8     statement -> return_statement
Rule 9     statement -> expression_statement
Rule 10    statement -> function_call
Rule 11    statement -> NEWLINE
Rule 12    function_call -> IDENT arg
Rule 13    if_statement -> IFF expression block
Rule 14    if_statement -> IFF expression block else_statement
Rule 15    else_statement -> ELS block
Rule 16    def_statement -> DEF IDENT arg block
Rule 17    arg -> IDENT
Rule 18    arg -> IDENT arg
Rule 19    arg -> <empty>
Rule 20    loop_statement -> LOP IDENT expression expression block
Rule 21    expression -> NUMBER
Rule 22    expression -> STRING
Rule 23    expression -> BOOL
Rule 24    expression -> NOT expression
Rule 25    expression -> IDENT
Rule 26    expression -> expression EQUAL expression
Rule 27    expression -> expression PLUS expression
Rule 28    expression -> expression MINUS expression
Rule 29    expression -> expression MUL expression
Rule 30    expression -> expression DIV expression
Rule 31    expression -> expression MODULUS expression
Rule 32    expression -> LPAREN expression RPAREN
Rule 33    return_statement -> RET expression
Rule 34    expression_statement -> expression NEWLINE

Terminals, with rules where they appear

BOOL                 : 23
DEDENT               : 2
DEF                  : 16
DIV                  : 30
ELS                  : 15
EQUAL                : 26
IDENT                : 12 16 17 18 20 25
IFF                  : 13 14
INDENT               : 2
LOP                  : 20
LPAREN               : 32
MINUS                : 28
MODULUS              : 31
MUL                  : 29
NEWLINE              : 11 34
NOT                  : 24
NUMBER               : 21
PLUS                 : 27
RET                  : 33
RPAREN               : 32
STRING               : 22
error                : 

Nonterminals, with rules where they appear

arg                  : 12 16 18
block                : 13 14 15 16 20
def_statement        : 6
else_statement       : 14
expression           : 13 14 20 20 24 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34
expression_statement : 9
function_call        : 10
if_statement         : 5
loop_statement       : 7
program              : 0
return_statement     : 8
statement            : 3 4
statements           : 1 2 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (3) statements -> . statement
    (4) statements -> . statements statement
    (5) statement -> . if_statement
    (6) statement -> . def_statement
    (7) statement -> . loop_statement
    (8) statement -> . return_statement
    (9) statement -> . expression_statement
    (10) statement -> . function_call
    (11) statement -> . NEWLINE
    (13) if_statement -> . IFF expression block
    (14) if_statement -> . IFF expression block else_statement
    (16) def_statement -> . DEF IDENT arg block
    (20) loop_statement -> . LOP IDENT expression expression block
    (33) return_statement -> . RET expression
    (34) expression_statement -> . expression NEWLINE
    (12) function_call -> . IDENT arg
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    NEWLINE         shift and go to state 10
    IFF             shift and go to state 11
    DEF             shift and go to state 13
    LOP             shift and go to state 15
    RET             shift and go to state 16
    IDENT           shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    LPAREN          shift and go to state 21

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    if_statement                   shift and go to state 4
    def_statement                  shift and go to state 5
    loop_statement                 shift and go to state 6
    return_statement               shift and go to state 7
    expression_statement           shift and go to state 8
    function_call                  shift and go to state 9
    expression                     shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (4) statements -> statements . statement
    (5) statement -> . if_statement
    (6) statement -> . def_statement
    (7) statement -> . loop_statement
    (8) statement -> . return_statement
    (9) statement -> . expression_statement
    (10) statement -> . function_call
    (11) statement -> . NEWLINE
    (13) if_statement -> . IFF expression block
    (14) if_statement -> . IFF expression block else_statement
    (16) def_statement -> . DEF IDENT arg block
    (20) loop_statement -> . LOP IDENT expression expression block
    (33) return_statement -> . RET expression
    (34) expression_statement -> . expression NEWLINE
    (12) function_call -> . IDENT arg
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statements .)
    NEWLINE         shift and go to state 10
    IFF             shift and go to state 11
    DEF             shift and go to state 13
    LOP             shift and go to state 15
    RET             shift and go to state 16
    IDENT           shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    LPAREN          shift and go to state 21

    statement                      shift and go to state 22
    if_statement                   shift and go to state 4
    def_statement                  shift and go to state 5
    loop_statement                 shift and go to state 6
    return_statement               shift and go to state 7
    expression_statement           shift and go to state 8
    function_call                  shift and go to state 9
    expression                     shift and go to state 12

state 3

    (3) statements -> statement .

    NEWLINE         reduce using rule 3 (statements -> statement .)
    IFF             reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    LOP             reduce using rule 3 (statements -> statement .)
    RET             reduce using rule 3 (statements -> statement .)
    IDENT           reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    BOOL            reduce using rule 3 (statements -> statement .)
    NOT             reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    DEDENT          reduce using rule 3 (statements -> statement .)


state 4

    (5) statement -> if_statement .

    NEWLINE         reduce using rule 5 (statement -> if_statement .)
    IFF             reduce using rule 5 (statement -> if_statement .)
    DEF             reduce using rule 5 (statement -> if_statement .)
    LOP             reduce using rule 5 (statement -> if_statement .)
    RET             reduce using rule 5 (statement -> if_statement .)
    IDENT           reduce using rule 5 (statement -> if_statement .)
    NUMBER          reduce using rule 5 (statement -> if_statement .)
    STRING          reduce using rule 5 (statement -> if_statement .)
    BOOL            reduce using rule 5 (statement -> if_statement .)
    NOT             reduce using rule 5 (statement -> if_statement .)
    LPAREN          reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    DEDENT          reduce using rule 5 (statement -> if_statement .)


state 5

    (6) statement -> def_statement .

    NEWLINE         reduce using rule 6 (statement -> def_statement .)
    IFF             reduce using rule 6 (statement -> def_statement .)
    DEF             reduce using rule 6 (statement -> def_statement .)
    LOP             reduce using rule 6 (statement -> def_statement .)
    RET             reduce using rule 6 (statement -> def_statement .)
    IDENT           reduce using rule 6 (statement -> def_statement .)
    NUMBER          reduce using rule 6 (statement -> def_statement .)
    STRING          reduce using rule 6 (statement -> def_statement .)
    BOOL            reduce using rule 6 (statement -> def_statement .)
    NOT             reduce using rule 6 (statement -> def_statement .)
    LPAREN          reduce using rule 6 (statement -> def_statement .)
    $end            reduce using rule 6 (statement -> def_statement .)
    DEDENT          reduce using rule 6 (statement -> def_statement .)


state 6

    (7) statement -> loop_statement .

    NEWLINE         reduce using rule 7 (statement -> loop_statement .)
    IFF             reduce using rule 7 (statement -> loop_statement .)
    DEF             reduce using rule 7 (statement -> loop_statement .)
    LOP             reduce using rule 7 (statement -> loop_statement .)
    RET             reduce using rule 7 (statement -> loop_statement .)
    IDENT           reduce using rule 7 (statement -> loop_statement .)
    NUMBER          reduce using rule 7 (statement -> loop_statement .)
    STRING          reduce using rule 7 (statement -> loop_statement .)
    BOOL            reduce using rule 7 (statement -> loop_statement .)
    NOT             reduce using rule 7 (statement -> loop_statement .)
    LPAREN          reduce using rule 7 (statement -> loop_statement .)
    $end            reduce using rule 7 (statement -> loop_statement .)
    DEDENT          reduce using rule 7 (statement -> loop_statement .)


state 7

    (8) statement -> return_statement .

    NEWLINE         reduce using rule 8 (statement -> return_statement .)
    IFF             reduce using rule 8 (statement -> return_statement .)
    DEF             reduce using rule 8 (statement -> return_statement .)
    LOP             reduce using rule 8 (statement -> return_statement .)
    RET             reduce using rule 8 (statement -> return_statement .)
    IDENT           reduce using rule 8 (statement -> return_statement .)
    NUMBER          reduce using rule 8 (statement -> return_statement .)
    STRING          reduce using rule 8 (statement -> return_statement .)
    BOOL            reduce using rule 8 (statement -> return_statement .)
    NOT             reduce using rule 8 (statement -> return_statement .)
    LPAREN          reduce using rule 8 (statement -> return_statement .)
    $end            reduce using rule 8 (statement -> return_statement .)
    DEDENT          reduce using rule 8 (statement -> return_statement .)


state 8

    (9) statement -> expression_statement .

    NEWLINE         reduce using rule 9 (statement -> expression_statement .)
    IFF             reduce using rule 9 (statement -> expression_statement .)
    DEF             reduce using rule 9 (statement -> expression_statement .)
    LOP             reduce using rule 9 (statement -> expression_statement .)
    RET             reduce using rule 9 (statement -> expression_statement .)
    IDENT           reduce using rule 9 (statement -> expression_statement .)
    NUMBER          reduce using rule 9 (statement -> expression_statement .)
    STRING          reduce using rule 9 (statement -> expression_statement .)
    BOOL            reduce using rule 9 (statement -> expression_statement .)
    NOT             reduce using rule 9 (statement -> expression_statement .)
    LPAREN          reduce using rule 9 (statement -> expression_statement .)
    $end            reduce using rule 9 (statement -> expression_statement .)
    DEDENT          reduce using rule 9 (statement -> expression_statement .)


state 9

    (10) statement -> function_call .

    NEWLINE         reduce using rule 10 (statement -> function_call .)
    IFF             reduce using rule 10 (statement -> function_call .)
    DEF             reduce using rule 10 (statement -> function_call .)
    LOP             reduce using rule 10 (statement -> function_call .)
    RET             reduce using rule 10 (statement -> function_call .)
    IDENT           reduce using rule 10 (statement -> function_call .)
    NUMBER          reduce using rule 10 (statement -> function_call .)
    STRING          reduce using rule 10 (statement -> function_call .)
    BOOL            reduce using rule 10 (statement -> function_call .)
    NOT             reduce using rule 10 (statement -> function_call .)
    LPAREN          reduce using rule 10 (statement -> function_call .)
    $end            reduce using rule 10 (statement -> function_call .)
    DEDENT          reduce using rule 10 (statement -> function_call .)


state 10

    (11) statement -> NEWLINE .

    NEWLINE         reduce using rule 11 (statement -> NEWLINE .)
    IFF             reduce using rule 11 (statement -> NEWLINE .)
    DEF             reduce using rule 11 (statement -> NEWLINE .)
    LOP             reduce using rule 11 (statement -> NEWLINE .)
    RET             reduce using rule 11 (statement -> NEWLINE .)
    IDENT           reduce using rule 11 (statement -> NEWLINE .)
    NUMBER          reduce using rule 11 (statement -> NEWLINE .)
    STRING          reduce using rule 11 (statement -> NEWLINE .)
    BOOL            reduce using rule 11 (statement -> NEWLINE .)
    NOT             reduce using rule 11 (statement -> NEWLINE .)
    LPAREN          reduce using rule 11 (statement -> NEWLINE .)
    $end            reduce using rule 11 (statement -> NEWLINE .)
    DEDENT          reduce using rule 11 (statement -> NEWLINE .)


state 11

    (13) if_statement -> IFF . expression block
    (14) if_statement -> IFF . expression block else_statement
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    IDENT           shift and go to state 24
    LPAREN          shift and go to state 21

    expression                     shift and go to state 23

state 12

    (34) expression_statement -> expression . NEWLINE
    (26) expression -> expression . EQUAL expression
    (27) expression -> expression . PLUS expression
    (28) expression -> expression . MINUS expression
    (29) expression -> expression . MUL expression
    (30) expression -> expression . DIV expression
    (31) expression -> expression . MODULUS expression

    NEWLINE         shift and go to state 25
    EQUAL           shift and go to state 26
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    MUL             shift and go to state 29
    DIV             shift and go to state 30
    MODULUS         shift and go to state 31


state 13

    (16) def_statement -> DEF . IDENT arg block

    IDENT           shift and go to state 32


state 14

    (12) function_call -> IDENT . arg
    (25) expression -> IDENT .
    (17) arg -> . IDENT
    (18) arg -> . IDENT arg
    (19) arg -> .

  ! reduce/reduce conflict for NEWLINE resolved using rule 19 (arg -> .)
  ! shift/reduce conflict for IDENT resolved as shift
    EQUAL           reduce using rule 25 (expression -> IDENT .)
    PLUS            reduce using rule 25 (expression -> IDENT .)
    MINUS           reduce using rule 25 (expression -> IDENT .)
    MUL             reduce using rule 25 (expression -> IDENT .)
    DIV             reduce using rule 25 (expression -> IDENT .)
    MODULUS         reduce using rule 25 (expression -> IDENT .)
    IDENT           shift and go to state 33
    NEWLINE         reduce using rule 19 (arg -> .)
    IFF             reduce using rule 19 (arg -> .)
    DEF             reduce using rule 19 (arg -> .)
    LOP             reduce using rule 19 (arg -> .)
    RET             reduce using rule 19 (arg -> .)
    NUMBER          reduce using rule 19 (arg -> .)
    STRING          reduce using rule 19 (arg -> .)
    BOOL            reduce using rule 19 (arg -> .)
    NOT             reduce using rule 19 (arg -> .)
    LPAREN          reduce using rule 19 (arg -> .)
    $end            reduce using rule 19 (arg -> .)
    DEDENT          reduce using rule 19 (arg -> .)

  ! NEWLINE         [ reduce using rule 25 (expression -> IDENT .) ]
  ! IDENT           [ reduce using rule 19 (arg -> .) ]

    arg                            shift and go to state 34

state 15

    (20) loop_statement -> LOP . IDENT expression expression block

    IDENT           shift and go to state 35


state 16

    (33) return_statement -> RET . expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    IDENT           shift and go to state 24
    LPAREN          shift and go to state 21

    expression                     shift and go to state 36

state 17

    (21) expression -> NUMBER .

    NEWLINE         reduce using rule 21 (expression -> NUMBER .)
    EQUAL           reduce using rule 21 (expression -> NUMBER .)
    PLUS            reduce using rule 21 (expression -> NUMBER .)
    MINUS           reduce using rule 21 (expression -> NUMBER .)
    MUL             reduce using rule 21 (expression -> NUMBER .)
    DIV             reduce using rule 21 (expression -> NUMBER .)
    MODULUS         reduce using rule 21 (expression -> NUMBER .)
    INDENT          reduce using rule 21 (expression -> NUMBER .)
    IFF             reduce using rule 21 (expression -> NUMBER .)
    DEF             reduce using rule 21 (expression -> NUMBER .)
    LOP             reduce using rule 21 (expression -> NUMBER .)
    RET             reduce using rule 21 (expression -> NUMBER .)
    IDENT           reduce using rule 21 (expression -> NUMBER .)
    NUMBER          reduce using rule 21 (expression -> NUMBER .)
    STRING          reduce using rule 21 (expression -> NUMBER .)
    BOOL            reduce using rule 21 (expression -> NUMBER .)
    NOT             reduce using rule 21 (expression -> NUMBER .)
    LPAREN          reduce using rule 21 (expression -> NUMBER .)
    $end            reduce using rule 21 (expression -> NUMBER .)
    DEDENT          reduce using rule 21 (expression -> NUMBER .)
    RPAREN          reduce using rule 21 (expression -> NUMBER .)


state 18

    (22) expression -> STRING .

    NEWLINE         reduce using rule 22 (expression -> STRING .)
    EQUAL           reduce using rule 22 (expression -> STRING .)
    PLUS            reduce using rule 22 (expression -> STRING .)
    MINUS           reduce using rule 22 (expression -> STRING .)
    MUL             reduce using rule 22 (expression -> STRING .)
    DIV             reduce using rule 22 (expression -> STRING .)
    MODULUS         reduce using rule 22 (expression -> STRING .)
    INDENT          reduce using rule 22 (expression -> STRING .)
    IFF             reduce using rule 22 (expression -> STRING .)
    DEF             reduce using rule 22 (expression -> STRING .)
    LOP             reduce using rule 22 (expression -> STRING .)
    RET             reduce using rule 22 (expression -> STRING .)
    IDENT           reduce using rule 22 (expression -> STRING .)
    NUMBER          reduce using rule 22 (expression -> STRING .)
    STRING          reduce using rule 22 (expression -> STRING .)
    BOOL            reduce using rule 22 (expression -> STRING .)
    NOT             reduce using rule 22 (expression -> STRING .)
    LPAREN          reduce using rule 22 (expression -> STRING .)
    $end            reduce using rule 22 (expression -> STRING .)
    DEDENT          reduce using rule 22 (expression -> STRING .)
    RPAREN          reduce using rule 22 (expression -> STRING .)


state 19

    (23) expression -> BOOL .

    NEWLINE         reduce using rule 23 (expression -> BOOL .)
    EQUAL           reduce using rule 23 (expression -> BOOL .)
    PLUS            reduce using rule 23 (expression -> BOOL .)
    MINUS           reduce using rule 23 (expression -> BOOL .)
    MUL             reduce using rule 23 (expression -> BOOL .)
    DIV             reduce using rule 23 (expression -> BOOL .)
    MODULUS         reduce using rule 23 (expression -> BOOL .)
    INDENT          reduce using rule 23 (expression -> BOOL .)
    IFF             reduce using rule 23 (expression -> BOOL .)
    DEF             reduce using rule 23 (expression -> BOOL .)
    LOP             reduce using rule 23 (expression -> BOOL .)
    RET             reduce using rule 23 (expression -> BOOL .)
    IDENT           reduce using rule 23 (expression -> BOOL .)
    NUMBER          reduce using rule 23 (expression -> BOOL .)
    STRING          reduce using rule 23 (expression -> BOOL .)
    BOOL            reduce using rule 23 (expression -> BOOL .)
    NOT             reduce using rule 23 (expression -> BOOL .)
    LPAREN          reduce using rule 23 (expression -> BOOL .)
    $end            reduce using rule 23 (expression -> BOOL .)
    DEDENT          reduce using rule 23 (expression -> BOOL .)
    RPAREN          reduce using rule 23 (expression -> BOOL .)


state 20

    (24) expression -> NOT . expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    IDENT           shift and go to state 24
    LPAREN          shift and go to state 21

    expression                     shift and go to state 37

state 21

    (32) expression -> LPAREN . expression RPAREN
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    IDENT           shift and go to state 24
    LPAREN          shift and go to state 21

    expression                     shift and go to state 38

state 22

    (4) statements -> statements statement .

    NEWLINE         reduce using rule 4 (statements -> statements statement .)
    IFF             reduce using rule 4 (statements -> statements statement .)
    DEF             reduce using rule 4 (statements -> statements statement .)
    LOP             reduce using rule 4 (statements -> statements statement .)
    RET             reduce using rule 4 (statements -> statements statement .)
    IDENT           reduce using rule 4 (statements -> statements statement .)
    NUMBER          reduce using rule 4 (statements -> statements statement .)
    STRING          reduce using rule 4 (statements -> statements statement .)
    BOOL            reduce using rule 4 (statements -> statements statement .)
    NOT             reduce using rule 4 (statements -> statements statement .)
    LPAREN          reduce using rule 4 (statements -> statements statement .)
    $end            reduce using rule 4 (statements -> statements statement .)
    DEDENT          reduce using rule 4 (statements -> statements statement .)


state 23

    (13) if_statement -> IFF expression . block
    (14) if_statement -> IFF expression . block else_statement
    (26) expression -> expression . EQUAL expression
    (27) expression -> expression . PLUS expression
    (28) expression -> expression . MINUS expression
    (29) expression -> expression . MUL expression
    (30) expression -> expression . DIV expression
    (31) expression -> expression . MODULUS expression
    (2) block -> . INDENT statements DEDENT

    EQUAL           shift and go to state 26
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    MUL             shift and go to state 29
    DIV             shift and go to state 30
    MODULUS         shift and go to state 31
    INDENT          shift and go to state 40

    block                          shift and go to state 39

state 24

    (25) expression -> IDENT .

    EQUAL           reduce using rule 25 (expression -> IDENT .)
    PLUS            reduce using rule 25 (expression -> IDENT .)
    MINUS           reduce using rule 25 (expression -> IDENT .)
    MUL             reduce using rule 25 (expression -> IDENT .)
    DIV             reduce using rule 25 (expression -> IDENT .)
    MODULUS         reduce using rule 25 (expression -> IDENT .)
    INDENT          reduce using rule 25 (expression -> IDENT .)
    NEWLINE         reduce using rule 25 (expression -> IDENT .)
    IFF             reduce using rule 25 (expression -> IDENT .)
    DEF             reduce using rule 25 (expression -> IDENT .)
    LOP             reduce using rule 25 (expression -> IDENT .)
    RET             reduce using rule 25 (expression -> IDENT .)
    IDENT           reduce using rule 25 (expression -> IDENT .)
    NUMBER          reduce using rule 25 (expression -> IDENT .)
    STRING          reduce using rule 25 (expression -> IDENT .)
    BOOL            reduce using rule 25 (expression -> IDENT .)
    NOT             reduce using rule 25 (expression -> IDENT .)
    LPAREN          reduce using rule 25 (expression -> IDENT .)
    $end            reduce using rule 25 (expression -> IDENT .)
    DEDENT          reduce using rule 25 (expression -> IDENT .)
    RPAREN          reduce using rule 25 (expression -> IDENT .)


state 25

    (34) expression_statement -> expression NEWLINE .

    NEWLINE         reduce using rule 34 (expression_statement -> expression NEWLINE .)
    IFF             reduce using rule 34 (expression_statement -> expression NEWLINE .)
    DEF             reduce using rule 34 (expression_statement -> expression NEWLINE .)
    LOP             reduce using rule 34 (expression_statement -> expression NEWLINE .)
    RET             reduce using rule 34 (expression_statement -> expression NEWLINE .)
    IDENT           reduce using rule 34 (expression_statement -> expression NEWLINE .)
    NUMBER          reduce using rule 34 (expression_statement -> expression NEWLINE .)
    STRING          reduce using rule 34 (expression_statement -> expression NEWLINE .)
    BOOL            reduce using rule 34 (expression_statement -> expression NEWLINE .)
    NOT             reduce using rule 34 (expression_statement -> expression NEWLINE .)
    LPAREN          reduce using rule 34 (expression_statement -> expression NEWLINE .)
    $end            reduce using rule 34 (expression_statement -> expression NEWLINE .)
    DEDENT          reduce using rule 34 (expression_statement -> expression NEWLINE .)


state 26

    (26) expression -> expression EQUAL . expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    IDENT           shift and go to state 24
    LPAREN          shift and go to state 21

    expression                     shift and go to state 41

state 27

    (27) expression -> expression PLUS . expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    IDENT           shift and go to state 24
    LPAREN          shift and go to state 21

    expression                     shift and go to state 42

state 28

    (28) expression -> expression MINUS . expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    IDENT           shift and go to state 24
    LPAREN          shift and go to state 21

    expression                     shift and go to state 43

state 29

    (29) expression -> expression MUL . expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    IDENT           shift and go to state 24
    LPAREN          shift and go to state 21

    expression                     shift and go to state 44

state 30

    (30) expression -> expression DIV . expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    NOT             shift and go to state 20
    IDENT           shift and go to state 24
    LPAREN          shift and go to state 21

    expression                     shift and go to state 45

state 31

    (31) expression -> expression MODULUS . expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (23) expression -> . BOOL
    (24) expression -> . NOT expression
    (25) expression -> . IDENT
    (26) expression -> . expression EQUAL expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . LPAREN expression RPAREN
